--- a/vigneshwaran/template-6/index1.html
+++ b/vigneshwaran/template-6/index1.html
@@ -13,7 +13,7 @@
     <header>
         <div class="wfl">
             <div class="wfl1">
-                <img src="gits.jpeg" alt="guitar" height="91px" width="100%">
+                <img src="gits.jpeg" alt="guitar" height="100px" width="">
             </div>
             <div class="wfr1">
                 <div class="fond-style">SoundAMP</div>
@@ -23,8 +23,8 @@
         <div class="wfr">
             <button>HTML Templates<i class="fa-solid fa-sort-down"></i></button>
             <button>More HTML Templates<i class="fa-solid fa-sort-down"></i></button>
-            <button1>DOWNLOAD NOW</button1>
-            <button2><i class="fa-brands fa-youtube"></i></button2>
+            <button>DOWNLOAD NOW</button>
+            <button2 class=""><i class="fa-brands fa-youtube"></i></button2>
             <button2><i class="fa-brands fa-facebook-f"></i></button2>
             <button2><i class="fa-brands fa-google-plus-g"></i></button2>
             <button2><i class="fa-brands fa-linkedin"></i></button2>
