--- a/vigneshwaran/template-6/index1.html
+++ b/vigneshwaran/template-6/index1.html
@@ -13,7 +13,7 @@
     <header>
         <div class="wfl">
             <div class="wfl1">
-                <img src="gits.jpeg" alt="guitar" height="91px" width="100%">
+                <img src="gg.jpeg" alt="guitar" height="100px">
             </div>
             <div class="wfr1">
                 <div class="fond-style">SoundAMP</div>
@@ -21,16 +21,18 @@
             <div style="clear: both;"></div>
         </div>
         <div class="wfr">
-            <button>HTML Templates<i class="fa-solid fa-sort-down"></i></button>
-            <button>More HTML Templates<i class="fa-solid fa-sort-down"></i></button>
-            <button1>DOWNLOAD NOW</button1>
-            <button2><i class="fa-brands fa-youtube"></i></button2>
-            <button2><i class="fa-brands fa-facebook-f"></i></button2>
-            <button2><i class="fa-brands fa-google-plus-g"></i></button2>
-            <button2><i class="fa-brands fa-linkedin"></i></button2>
-            <button2><i class="fa-brands fa-pinterest"></i></button2>
-            <button2><i class="fa-brands fa-square-instagram"></i></button2>
-            <button2><i class="fa-brands fa-square-twitter"></i></button2>
+            <div class="padding2">
+                <a href class="button1">HTML Templates<i class="fa-solid fa-sort-down"></i></a>
+                <a href class="button1">More HTML Templates<i class="fa-solid fa-sort-down"></i></a>
+                <button>DOWNLOAD NOW</button>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-google-plus-g"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+            </div>
         </div>
         <div style="clear: both;"></div>
     </header>
@@ -43,8 +45,8 @@
                     <div class="padding3 fond-style2">Night Laser Show</div>
                     <div class="padding3">#hip-hop #nrp #dance</div>
                     <div class="padding3 fond-style3">We are happy to announce this special laser show.</div>
-                    <div class="text padding2">
-                        <button3>See more...</button3>
+                    <div class="text">
+                        <div class="button3">See more...</div>
                     </div>
                 </div>
             </div>
@@ -54,8 +56,8 @@
                     <div class="padding3 fond-style2">Live Music</div>
                     <div class="padding3">#live #rock #alternative</div>
                     <div class="padding3 fond-style3">Special event for rock fans! Live music show.</div>
-                    <div class="text padding2">
-                        <button3>See more...</button3>
+                    <div class="text">
+                        <div class="button3">See more...</div>
                     </div>
                 </div>
             </div>
@@ -66,8 +68,8 @@
                     <div class="padding3">#dj #master class</div>
                     <div class="padding3 fond-style3">DJ WoodSmell will teach you new trick please sign up.
                     </div>
-                    <div class="text padding2">
-                        <button3>See more...</button3>
+                    <div class="text">
+                        <div class="button3">See more...</div>
                     </div>
                 </div>
             </div>
@@ -77,12 +79,12 @@
                     <div class="padding3 fond-style2">Best Night Party</div>
                     <div class="padding3">#party #lub</div>
                     <div class="padding3 fond-style3">Our trational event best hits all night long.</div>
-                    <div class="text padding2">
-                        <button3>See more...</button3>
+                    <div class="text">
+                        <div class="button3">See more...</div>
                     </div>
                 </div>
             </div>
-
+            <div style="clear: both;"></div>
         </div>
 </body>
 
