--- a/janani/temp 2/index.html
+++ b/janani/temp 2/index.html
@@ -14,6 +14,6 @@
         <div class="float_right width txt_center border padding3 bg_color font_color">content<br><span class="font_size2">690x450</span></div>
         <div style="clear: both;"></div>
     </div>
-    <div class="font_size margin txt_center border padding bg_color font_color">footer<br><span class="font_size2">980x70</span></div>
+    <div class="font_size margin txt_center border padding bg_color font_color">footer<span class="font_size2">980x70</span></div>
 </body>
 </html>
