--- a/sarupriya/JavaScript/form/index.html
+++ b/sarupriya/JavaScript/form/index.html
@@ -19,7 +19,7 @@
                     <label for="Login">Login Id</label>
                     <div>
                         <input type="text" id="login" name="loginid" placeholder="Enter your login id.." minlength="3"
-                            maxlength="20" pattern="[A-Za-z]">
+                            maxlength="20">
                     </div>
                     <span class="error_msg" id="name_error"></span>
                 </div>
