--- a/vigneshwaran/template-6/tem.html
+++ b/vigneshwaran/template-6/tem.html
@@ -24,7 +24,7 @@
             <div class="padding2">
                 <a href class="button1">HTML Templates<i class="fa-solid fa-sort-down"></i></a>
                 <a href class="button1">More HTML Templates<i class="fa-solid fa-sort-down"></i></a>
-                <button>DOWNLOAD NOW</button>
+                <button href="#">Download Now</button>
                 <i class="fa-brands fa-youtube"></i>
                 <i class="fa-brands fa-facebook-f"></i>
                 <i class="fa-brands fa-google-plus-g"></i>
