--- a/vigneshwaran/template-6/tem.html
+++ b/vigneshwaran/template-6/tem.html
@@ -11,30 +11,37 @@
 
 <body>
     <header>
-        <div class="wfl">
-            <div class="wfl1">
-                <img src="gg.jpeg" alt="guitar" height="100px">
+        <div class="wid">
+            <div class="wfl">
+                <div class="wfl1">
+                    <img src="gg.jpeg" alt="guitar" height="100px">
+                </div>
+                <div class="wfr1">
+                    <div class="fond-style">SoundAMP</div>
+                </div>
+                <div style="clear: both;"></div>
             </div>
-            <div class="wfr1">
-                <div class="fond-style">SoundAMP</div>
+            <div class="wfr">
+                <div class="padding2">
+                    <div class="wfl3">
+                        <a href class="button1">HTML Templates<i class="fa-solid fa-sort-down"></i></a>
+                        <a href class="button1">More HTML Templates<i class="fa-solid fa-sort-down"></i></a>
+                        <a href class="button">DOWNLOAD NOW</a>
+                    </div>
+                    <div class="wfr3">
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-google-plus-g"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <i class="fa-brands fa-square-twitter"></i>
+                    </div>
+                    <div style="clear: both;"></div>
+                </div>
             </div>
             <div style="clear: both;"></div>
         </div>
-        <div class="wfr">
-            <div class="padding2">
-                <a href class="button1">HTML Templates<i class="fa-solid fa-sort-down"></i></a>
-                <a href class="button1">More HTML Templates<i class="fa-solid fa-sort-down"></i></a>
-                <button>DOWNLOAD NOW</button>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-google-plus-g"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-square-twitter"></i>
-            </div>
-        </div>
-        <div style="clear: both;"></div>
     </header>
     <div class="margin">
         <div class="bg-image fond-style1">ALL EVENT</div>
@@ -45,9 +52,9 @@
                     <div class="padding3 fond-style2">Night Laser Show</div>
                     <div class="padding3">#hip-hop #nrp #dance</div>
                     <div class="padding3 fond-style3">We are happy to announce this special laser show.</div>
-                    <div class="text">
+                    <a href class="text">
                         <div class="button3">See more...</div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="wfl2">
@@ -56,9 +63,9 @@
                     <div class="padding3 fond-style2">Live Music</div>
                     <div class="padding3">#live #rock #alternative</div>
                     <div class="padding3 fond-style3">Special event for rock fans! Live music show.</div>
-                    <div class="text">
+                    <a href class="text">
                         <div class="button3">See more...</div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="wfl2">
@@ -68,9 +75,9 @@
                     <div class="padding3">#dj #master class</div>
                     <div class="padding3 fond-style3">DJ WoodSmell will teach you new trick please sign up.
                     </div>
-                    <div class="text">
+                    <a href class="text">
                         <div class="button3">See more...</div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="wfr2">
@@ -79,9 +86,9 @@
                     <div class="padding3 fond-style2">Best Night Party</div>
                     <div class="padding3">#party #lub</div>
                     <div class="padding3 fond-style3">Our trational event best hits all night long.</div>
-                    <div class="text">
+                    <a href class="text">
                         <div class="button3">See more...</div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div style="clear: both;"></div>
