--- a/janani/temp 2/index.html
+++ b/janani/temp 2/index.html
@@ -14,6 +14,6 @@
         <div class="float_right width bg_color font_color txt_center padding2 font_size line_height">Content <br><span class="font_size2">690x70</span></div>
         <div style="clear: both;"></div>
     </div>
-    <div class="font_size margin txt_center border padding bg_color font_color">footer<span class="font_size2">980x70</span></div>
+    <div class="font_size txt_center border padding bg_color font_color">footer<span class="font_size2">980x70</span></div>
 </body>
 </html>
