--- a/siva/template3/index.html
+++ b/siva/template3/index.html
@@ -12,12 +12,24 @@
     <div>
         <div class="float_left width1">
             <div class="border padding text_align font_style bg_color3">
-                <div>section</div>
-                <!-- <div>
-                    <div class="border padding bg_color3">
-                        <div class="width3 font_style">article</div>
-                    </div>
-                </div> -->
+                <div class="margin">
+                    <div class="margin font_style1">section</div>
+                    <div class="width_margin margin border padding">
+                   <div class="margin font_style1">Article</div>
+                   <div class="width_margin margin border">
+                    <div class="border1">header</div>
+                    <div>section</div>
+                   </div>
+                </div>    
+                </div>              
+                
+                <div class="width_margin margin border padding">
+                   <div class="margin font_style1">Article</div>
+                   <div class="width_margin margin border">
+                    <div class="border1">header</div>
+                    <div>section</div>
+                   </div>
+                </div>   
             </div>   
         </div>
         <div class="float_right width2">
