--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -79,8 +79,8 @@
         </div>
 
     </div>
-    <div class="bg_img text_align  ">
-        <div class="padding ">
+    <div class="bg_img text_align  txt_align">
+        <div class="padding1">
             <div class="font_s3 color_2">
                 Responsive
                 <span class="text text-dark"> and </span>cross Browser <span class="text text-dark">Compatibility</span>
@@ -92,33 +92,33 @@
     </div>
     <div class="container-fluid">
         <div class="container p-5 border_b">
-            <div class="row">
-                <div class="col-md-1 col-sm-12 p-2">
+            <div class="row txt_align">
+                <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
                     <img src="img1.png" alt="star" width="70%" height="70px">
                 </div>
-                <div class="col-md-3 col-sm-12">
+                <div class="col-md-3 col-sm-12 nofloat">
                     <div class="font_s4 color_3">High
-                        <span class="bold">Quality</span>
+                        <span class="text bold text-dark">Quality</span>
                     </div>
                     <div class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit Temporibus ratione.</div>
                     <div class="bold">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-12 p-2">
+                <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
                     <img src="img2.png" alt="box" height="70px" width="70%">
                 </div>
                 <div class="col-md-3 col-sm-12">
                     <div class="font_s4 color_3">
-                        Rich of <span class="bold">Features</span>
+                        Rich of <span class="text bold text-dark">Features</span>
                     </div>
                     <div class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit Temporibus ratione.</div>
                     <div class="bold">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-12 p-2">
+                <div class="col-md-1 col-sm-12 p-2 txt_align width1 margin1">
                     <img src="img3.png" alt="tab" height="80px" width="80%">
                 </div>
                 <div class="col-md-3 col-sm-12">
                     <div class="font_s4 color_3">
-                        Moder <span class="bold">Design</span>
+                        Moder <span class="text bold text-dark">Design</span>
                     </div>
                     <div class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit Temporibus ratione.</div>
                     <div class="bold">Learn more</div>
@@ -127,9 +127,9 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class=" container text_align p-4">
+        <div class=" container text_align p-4 txt_align">
             <div class="font_s4 color_3">Our
-                <span class="bold">Pricing</span>
+                <span class="bold text text-dark">Pricing</span>
             </div>
             <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit Reiciendis accusantium consectetur
                 adipisicing.</div>
@@ -138,10 +138,10 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 text_align">
+                <div class="col-md-3 col-sm-6 text_align nofloat width2">
                     <div class="bg_i p-4  text-white">
-                        <div class="font_s5 p-4">Very
-                            <span class="bold">Basic</span>
+                        <div class="font_s p-4">Very
+                            <span class="bold text text-white">Basic</span>
                         </div>
                     </div>
                     <div class="p-4 bg_j text-white">
@@ -171,10 +171,10 @@
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align">
+                <div class="col-md-3 col-sm-6 text_align nofloat width2">
                     <div class="bg_i p-4  text-white">
-                        <div class="font_s5 p-4">Simple
-                            <span class="bold">Choice</span>
+                        <div class="font_s p-4">Simple
+                            <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
                     <div class="p-4   bg_j text-white">
@@ -204,10 +204,10 @@
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align">
+                <div class="col-md-3 col-sm-6 text_align nofloat width2">
                     <div class="bg_l p-4  text-white">
-                        <div class="font_s5 p-4">Special
-                            <span class="bold">Choice</span>
+                        <div class="font_s p-4">Special
+                            <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
                     <div class="p-4 bg_m text-white">
@@ -237,10 +237,10 @@
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align">
+                <div class="col-md-3 col-sm-6 text_align nofloat width2">
                     <div class="bg_n p-4  text-white">
-                        <div class="font_s5 p-4">Just
-                            <span class="bold">Happy</span>
+                        <div class="font_s p-4">Just
+                            <span class="bold text text-white">Happy</span>
                         </div>
                     </div>
                     <div class="p-4 bg_j text-white">
@@ -273,13 +273,13 @@
             </div>
         </div>
     </div>
-    <div class="text_align">
-        <div class="font_s4 p-5">What people <span class="bold">saying</span> about us</div>
+    <div class="text_align txt_align">
+        <div class="font_s4 p-5">What people <span class="bold text text-dark">saying</span> about us</div>
     </div>
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-12 txt_r">
+                <div class="col-md-2 col-sm-12 txt_r txt_align">
                     <i class="fa-solid fa-quote-left"></i>
                 </div>
                 <div class="col-md-8 col-sm-12 p-3 text_align text-body-secondary linespacing">
@@ -287,39 +287,39 @@
                     esat quam.Vivamus portitor eros quis nisi lacinia sed interdum lorem vutputate.
                     Aliquam a <br> orci quis nisi sagittis. Etiam adipiscing justo quis feugiat. <br>
                 </div>
-                <div class="col-md-2 col-sm-12 ">
+                <div class="col-md-2 col-sm-12 txt_align">
                     <i class="fa-solid fa-quote-right"></i>
                 </div>
             </div>
         </div>
     </div>
-    <div class="text_align ">
+    <div class="text_align txt_align">
         <img src="img4.png" alt="man" width="4%" height="70px">
     </div>
-    <div class="text_align font_s5 ">Hillary Doe</div>
-    <div class="text_align pt-1   bold">www.companyname.com</div>
-    <div class="container padding">
-        <div class="font_s4 ">Recent <span class="bold">Works</span></div>
+    <div class="text_align font_s5 txt_align">Hillary Doe</div>
+    <div class="text_align pt-1 txt_align  bold">www.companyname.com</div>
+    <div class="container padding txt_align">
+        <div class="font_s4 ">Recent <span class="bold text-dark text">Works</span></div>
     </div>
     <div class="container-fluid pb-5">
         <div class="container pb-5">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <img src="img5.jpg" alt="Image" width="90%" height="200px">
+            <div class="row nofloat width3">
+                <div class="col-md-3 col-sm-6 nofloat width4">
+                    <img src="img5.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <img src="img6.jpg" alt="Image" width="90%" height="200px">
+                <div class="col-md-3 col-sm-6 nofloat width4">
+                    <img src="img6.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <img src="img7.jpg" alt="Image" width="90%" height="200px">
+                <div class="col-md-3 col-sm-6 nofloat width4">
+                    <img src="img7.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <img src="img8.jpg" alt="Image" width="90%" height="200px">
+                <div class="col-md-3 col-sm-6 nofloat width4">
+                    <img src="img8.jpg" alt="Image" width="100%" height="190px">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid pt-5 bg_n pb-5">
+    <div class="container-fluid pt-3 bg_n pb-5">
         <div class="container ">
             <div class="row">
                 <div class="col-md-4 col-sm-6 text-white">
@@ -361,16 +361,16 @@
     </div>
     <div class="container-fluid bg_p">
         <div class="container pt-4">
-            <div class="row text-white">
+            <div class="row text-white txt_align nofloat">
                 <div class="col-md-6 col-sm-12">
                     <div>© Eterna company. All rights reserved</div>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <div class="txt_r">Designed by BootstrapMade</div>
+                    <div class="txt_r txt_align nofloat">Designed by BootstrapMade</div>
                 </div>
             </div>
         </div>
-        <div class="txt_r">
+        <div class="txt_r nofloat">
             <i class="fa-solid fa-angle-up text_align py-2"></i>
         </div>
     </div>
