--- a/vigneshwaran/template-7/index.html
+++ b/vigneshwaran/template-7/index.html
@@ -21,7 +21,7 @@
         <div class="bg-color1 padding1 margin1">
             <div class="wfl"><img src="rock.png.png" alt="rocket" height="135px" width="100%"></div>
             <div class="wfr">
-                <div class="font-style">About<br>
+                <div class="font-style7">About<br>
                     <p class="font-style0">And then some plain text would go in here saying some-<br>thing about the
                         section we're in. Probably
                         some glowing<br>statement about the company or whatever.</p>
