--- a/siva/template3/index.html
+++ b/siva/template3/index.html
@@ -7,24 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="border padding text_align font_style background width bg_color1">Header</div>
-    <div class="border padding text_align font_style background width bg_color2">nav</div>
+    <div class="border padding text_align font_style width bg_color1">header</div>
+    <div class="border padding text_align font_style width bg_color2">nav</div>
     <div>
         <div class="float_left width1">
             <div class="border padding text_align font_style bg_color3">
-                <div>section</div>
-                <!-- <div>
-                    <div class="border padding bg_color3">
-                        <div class="width3 font_style">article</div>
+                <div class="margin">
+                    <div class="margin font_style1">section</div>
+                <div class="section_margin margin border padding bg_article">
+                    <div class="margin font_style1">article</div>
+                    <div class="section_margin margin border font_style1">
+                        <div class="border1 bg_header">header</div>
+                        <div class="padding_top bg_p">p</div>
                     </div>
-                </div> -->
+                </div>
+                </div> 
+                
+                <div class="section_margin margin border padding bg_article">
+                    <div class="margin font_style1">article</div>
+                    <div class="section_margin margin border font_style1">
+                        <div class="border1 bg_header">header</div>
+                        <div class="padding_top bg_p">p</div>
+                    </div>
+                </div>   
             </div>   
         </div>
         <div class="float_right width2">
-            <div class="border padding text_align font_style bg_color4">aside</div>
+            <div class="border aside_padding text_align bg_color4 font_style1">
+                <div>aside</div>
+            </div>
         </div>
         <div style="clear: both;"></div>
     </div>
-    <div class="border padding text_align font_style background width bg_color5">Footer</div>
+    <div class="border padding text_align font_style width bg_color5">Footer</div>
 </body>
 </html>
