--- a/janani/temp 3/index.html
+++ b/janani/temp 3/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="font_size txt_center border margin padding bg_color">header</div>
     <div class="font_size txt_center border margin padding">nav</div>
-    <div class="float_left ">
+   <div>
+    <div class="float_left width">
         <div class="font_size txt_center border padding2  margin width">section
-        <div class="font_size txt_center padding2 width">article</div>
-        <div class="font_size txt_center padding2 width">header</div>
-        <div class="font_size txt_center padding2 width">p</div>
-        <div class="font_size txt_center padding2 width">article</div>
-        <div class="font_size txt_center padding2 width">header</div>
-        <div class="font_size txt_center padding2 width">p</div>
-        <div class="float_right txt_center font_size padding width1">aside</div>
-        <div style="clear: both;"></div>                              
+            <div class="font_size txt_center padding2 width">article</div>
+            <div class="font_size txt_center padding2 width">header</div>
+            <div class="font_size txt_center padding2 width">p</div>
+            <div class="font_size txt_center padding2 width">article</div>
+            <div class="font_size txt_center padding2 width">header</div>
+            <div class="font_size txt_center padding2 width">p</div>
+        </div>
+    </div>
+    <div class="float_right width1">
+        <div class="txt_center font_size padding">aside</div>
+    </div>
+    <div style="clear: both;"></div>
+   </div>
+
+
     <div class="font_size txt_center border padding">footer</div>
     </div>
 </body>
+
 </html>
