--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -10,6 +10,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb494cc880.js" crossorigin="anonymous"></script>
+
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +20,7 @@
         <div class="container">
             <div class="row p-3 text-white">
                 <div class="col-md-6 col-sm-12 text-white  ">
-                    <div class="txt_align"> 
+                    <div class="txt_align">
                         <i class="fa-solid fa-phone text text-white "></i>
                         +62 088 999 123
                     </div>
@@ -131,7 +132,7 @@
             <div class="font_s4 color_3">Our
                 <span class="bold text text-dark">Pricing</span>
             </div>
-            <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit Reiciendis accusantium consectetur
+            <div class="p-3 text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit Reiciendis accusantium consectetur
                 adipisicing.</div>
         </div>
     </div>
@@ -303,7 +304,7 @@
     </div>
     <div class="container-fluid pb-5">
         <div class="container pb-5">
-            <div class="row nofloat width3">
+            <div class="row nofloat width3 txt_align">
                 <div class="col-md-3 col-sm-6 nofloat width4">
                     <img src="img5.jpg" alt="Image" width="100%" height="190px">
                 </div>
@@ -324,32 +325,38 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 text-white">
                     <div class="font_s6 ">Browser pages</div>
-                    <div class="pt-3 pb-2">our company</div>
-                    <div class="pb-2">terms and conditions </div>
-                    <div class="pb-2">Privacy policy</div>
-                    <div class="pb-2">press release</div>
-                    <div class="pb-2">what we have done</div>
-                    <div class="pb-2">our support forum</div>
+                    <div class="font_s8">
+                        <div class="pt-3 pb-2">our company</div>
+                        <div class="pb-2">terms and conditions </div>
+                        <div class="pb-2">Privacy policy</div>
+                        <div class="pb-2">press release</div>
+                        <div class="pb-2">what we have done</div>
+                        <div class="pb-2">our support forum</div>
+                    </div>
                 </div>
                 <div class="col-md-4 col-sm-6 text-white">
                     <div class="font_s6 ">Get in touch</div>
-                    <div class="pt-3 font_s7"> Eterna company inc </div>
-                    <div>Somestreet 200 vw. suite village A001 </div>
-                    <div class="pb-4">Jakarta 13426 indonesia</div>
-                    <div>
-                        <i class="fa-solid fa-phone text text-white phone"></i>
-                        (123)456-7890-(123)555-7891
-                    </div>
-                    <div>
-                        <i class="fa-regular fa-envelope"></i>
-                        email@domainname.com
+                    <div class="font_s8">
+                        <div class="pt-3 font_s7"> Eterna company inc. </div>
+                        <div>Somestreet 200 vw. suite village A001 </div>
+                        <div class="pb-4">Jakarta 13426 indonesia</div>
+                        <div>
+                            <i class="fa-solid fa-phone text text-white phone"></i>
+                            (123)456-7890-(123)555-7891
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-envelope"></i>
+                            email@domainname.com
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 text-white">
-                    <div class="font_s6 ">Subscribe newsletter</div>
-                    <div class="pt-3">
-                        keep updated for new releases and freebies. Enter your <br>
-                        e-mail and subscribe to our newsletter.
+                    <div class="font_s8">
+                        <div class="font_s6 ">Subscribe newsletter</div>
+                        <div class="pt-3">
+                            keep updated for new releases and freebies. Enter your <br>
+                            e-mail and subscribe to our newsletter.
+                        </div>
                     </div>
                     <div class="input-group pt-3">
                         <input type="text" class="form-control " placeholder="" />
@@ -359,7 +366,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg_p">
+    <div class="container-fluid bg_p font_s8">
         <div class="container pt-4">
             <div class="row text-white txt_align nofloat">
                 <div class="col-md-6 col-sm-12">
@@ -371,7 +378,7 @@
             </div>
         </div>
         <div class="txt_r nofloat">
-            <i class="fa-solid fa-angle-up text_align py-2"></i>
+            <i class="fa-solid fa-angle-up text_align "></i>
         </div>
     </div>
 </body>
