--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -132,16 +132,17 @@
             <div class="font_s4 color_3">Our
                 <span class="bold text text-dark">Pricing</span>
             </div>
-            <div class="p-3 text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit Reiciendis accusantium consectetur
+            <div class="p-3 text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit Reiciendis
+                accusantium consectetur
                 adipisicing.</div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 text_align nofloat width2">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2 width4">
                     <div class="bg_i p-4  text-white">
-                        <div class="font_s p-4">Very
+                        <div class="font_s pb-4 txt_align">Very
                             <span class="bold text text-white">Basic</span>
                         </div>
                     </div>
@@ -164,17 +165,19 @@
                     <div class="p-3 border">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k">
-                        <button type="button" class="p-1 button_color border_n text-white width_b"> <i
-                                class="fa-solid fa-angle-down bold"></i>
-                            sign up
-                        </button>
+                    <div class="p-4 bg_k ">
+                        <div class="txt_align width3 margin1">
+                            <button type="button" class="p-1 button_color border_n text-white width_b "> <i
+                                    class="fa-solid fa-angle-down bold"></i>
+                                sign up
+                            </button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align nofloat width2">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2 width4 ">
                     <div class="bg_i p-4  text-white">
-                        <div class="font_s p-4">Simple
+                        <div class="font_s pb-4 txt_align">Simple
                             <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
@@ -197,17 +200,19 @@
                     <div class="p-3 border">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k">
-                        <button type="button" class="p-1 button_color border_n text-white width_b"> <i
-                                class="fa-solid fa-angle-down bold"></i>
-                            sign up
-                        </button>
+                    <div class="p-4 bg_k ">
+                        <div class="txt_align width3 margin1">
+                            <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
+                                    class="fa-solid fa-angle-down bold"></i>
+                                sign up
+                            </button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align nofloat width2">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  width4">
                     <div class="bg_l p-4  text-white">
-                        <div class="font_s p-4">Special
+                        <div class="font_s pb-4 txt_align">Special
                             <span class="bold text text-white ">Choice</span>
                         </div>
                     </div>
@@ -230,17 +235,19 @@
                     <div class="p-3 border">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_m1">
-                        <button type="button" class="p-1 button_color border_n text-white width_b"> <i
-                                class="fa-solid fa-angle-down bold"></i>
-                            sign up
-                        </button>
+                    <div class="p-4 bg_m1 ">
+                        <div class="txt_align width3 margin1">
+                            <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
+                                    class="fa-solid fa-angle-down bold"></i>
+                                sign up
+                            </button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-6 text_align nofloat width2">
+                <div class=" col-md-3 col-sm-6 text_align  nofloat width2  width4">
                     <div class="bg_n p-4  text-white">
-                        <div class="font_s p-4">Just
+                        <div class="font_s pb-4 txt_align">Just
                             <span class="bold text text-white">Happy</span>
                         </div>
                     </div>
@@ -263,11 +270,13 @@
                     <div class="p-3 border">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k">
-                        <button type="button" class="p-1 button_color border_n text-white width_b"> <i
-                                class="fa-solid fa-angle-down bold"></i>
-                            sign up
-                        </button>
+                    <div class="p-4 bg_k ">
+                        <div class="txt_align width3 margin1">
+                            <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
+                                    class="fa-solid fa-angle-down bold"></i>
+                                sign up
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -305,16 +314,16 @@
     <div class="container-fluid pb-5">
         <div class="container pb-5">
             <div class="row nofloat width3 txt_align">
-                <div class="col-md-3 col-sm-6 nofloat width4">
+                <div class="  col-md-3 col-sm-6 nofloat width4">
                     <img src="img5.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat width4">
+                <div class="  col-md-3 col-sm-6 nofloat width4">
                     <img src="img6.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat width4">
+                <div class="  col-md-3 col-sm-6 nofloat width4">
                     <img src="img7.jpg" alt="Image" width="100%" height="190px">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat width4">
+                <div class="  col-md-3 col-sm-6 nofloat width4">
                     <img src="img8.jpg" alt="Image" width="100%" height="190px">
                 </div>
             </div>
