--- a/abinash/bootstrap/boot.html
+++ b/abinash/bootstrap/boot.html
@@ -140,7 +140,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2 width4">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
                     <div class="bg_i p-4  text-white">
                         <div class="font_s pb-4 txt_align">Very
                             <span class="bold text text-white">Basic</span>
@@ -166,8 +166,8 @@
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
                     <div class="p-4 bg_k ">
-                        <div class="txt_align width3 margin1">
-                            <button type="button" class="p-1 button_color border_n text-white width_b "> <i
+                        <div class="txt_align  width3 margin1">
+                            <button type="button" class="p-1 button_color border_n text text-white width_b "> <i
                                     class="fa-solid fa-angle-down bold"></i>
                                 sign up
                             </button>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
 
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2 width4 ">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
                     <div class="bg_i p-4  text-white">
                         <div class="font_s pb-4 txt_align">Simple
                             <span class="bold text text-white ">Choice</span>
@@ -200,9 +200,9 @@
                     <div class="p-3 border">
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
-                    <div class="p-4 bg_k ">
+                    <div class="p-4 bg_k  ">
                         <div class="txt_align width3 margin1">
-                            <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
+                            <button type="button" class="p-1 button_color border_n text text-white width_b txt_align"> <i
                                     class="fa-solid fa-angle-down bold"></i>
                                 sign up
                             </button>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
 
-                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  width4">
+                <div class="  col-md-3 col-sm-6 text_align  nofloat width2  ">
                     <div class="bg_l p-4  text-white">
                         <div class="font_s pb-4 txt_align">Special
                             <span class="bold text text-white ">Choice</span>
@@ -245,7 +245,7 @@
                     </div>
                 </div>
 
-                <div class=" col-md-3 col-sm-6 text_align  nofloat width2  width4">
+                <div class=" col-md-3 col-sm-6 text_align  nofloat width2 ">
                     <div class="bg_n p-4  text-white">
                         <div class="font_s pb-4 txt_align">Just
                             <span class="bold text text-white">Happy</span>
@@ -271,7 +271,7 @@
                         <i class="fa-solid fa-check"></i> stop anytime easily
                     </div>
                     <div class="p-4 bg_k ">
-                        <div class="txt_align width3 margin1">
+                        <div class="txt_align width3 ">
                             <button type="button" class="p-1 button_color border_n text-white width_b txt_align"> <i
                                     class="fa-solid fa-angle-down bold"></i>
                                 sign up
